fix: update color variables for sidebar and card components to improve dark mode styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,10 +70,10 @@
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.9103 0.0097 299.23);
   --sidebar-foreground: oklch(0.1969 0.0142 298.16);
-  --sidebar-primary: oklch(0.205 0 0);
+  --sidebar-primary: oklch(27.093% 0.02621 297.7);
   --sidebar-primary-foreground: oklch(0.9103 0.0097 299.23);
   --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-accent-foreground: oklch(27.093% 0.02621 297.7);
   --sidebar-border: oklch(0.8061 0.0642 6.26);
   --sidebar-ring: oklch(0.708 0 0);
   --font-inter: "Inter", sans-serif;
@@ -83,12 +83,12 @@
 .dark {
   --background: oklch(0.1969 0.0142 298.16);
   --foreground: oklch(0.9103 0.0097 299.23);
-  --card: oklch(0.205 0 0);
+  --card: oklch(27.093% 0.02621 297.7);
   --card-foreground: oklch(0.9103 0.0097 299.23);
-  --popover: oklch(0.205 0 0);
+  --popover: oklch(27.093% 0.02621 297.7);
   --popover-foreground: oklch(0.9103 0.0097 299.23);
   --primary: oklch(0.8061 0.0642 6.26);
-  --primary-foreground: oklch(0.205 0 0);
+  --primary-foreground: oklch(27.093% 0.02621 297.7);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.9103 0.0097 299.23);
   --muted: oklch(0.269 0 0);
@@ -97,14 +97,14 @@
   --accent-foreground: oklch(0.9103 0.0097 299.23);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(97.584% 0.00759 6.45 / 5%);
-  --input: oklch(0.9758 0.0076 7.28 / 15%);
+  --input: oklch(27.093% 0.02621 297.7);
   --ring: oklch(0.556 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
+  --sidebar: oklch(27.093% 0.02621 297.7);
   --sidebar-foreground: oklch(0.9103 0.0097 299.23);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.9103 0.0097 299.23);
